src/objects/TeamMember__c.object
<CustomObject>
    <fields>
        <fullName>IsActiveUser__c</fullName>
        <formula>If(User__r.IsActive, &quot;True&quot;, &quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastActivityDate__c</fullName>
        <label>Last Activity Date</label>
        <summarizedField>TimeCard__c.Date__c</summarizedField>
        <summaryForeignKey>TimeCard__c.TeamMember__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MProject__c</referenceTo>
        <relationshipLabel>Team Members</relationshipLabel>
        <relationshipName>TeamMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UI Designer</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TotalHours__c</fullName>
        <label>Total Hours</label>
        <summarizedField>TimeCard__c.Hours__c</summarizedField>
        <summaryForeignKey>TimeCard__c.TeamMember__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team Member</label>
    <nameField>
        <label>Team Member Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I80000000P11PEAS_00N80000003iWpDEAU</fullName>
        <active>true</active>
        <errorMessage>Project doesn&apos;t match.</errorMessage>
        <field>TimeCard__c.TeamMember__c</field>
        <filterItems>
            <field>TeamMember__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <infoMessage>Team Member should match the project.</infoMessage>
        <isOptional>false</isOptional>
        <name>Time Card_Team Member</name>
        <sourceObject>TimeCard__c</sourceObject>
    </namedFilters>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>